# go/api/openapi.yaml
@@ -3600,6 +3600,27 @@ paths:
         the ACL Key.
       tags:
       - permissions
+  /datastore/update:
+    patch:
+      operationId: updateAcls
+      requestBody:
+        content:
+          application/json:
+            schema:
+              items:
+                $ref: '#/components/schemas/AclData'
+              type: array
+        required: true
+      responses:
+        "200":
+          description: Success
+      security:
+      - openlattice_auth: []
+      - http_auth: []
+      summary: Adds, removes, or sets the ace for a particular set of acl keys. Successful
+        only if user is the owner of all acl keys.
+      tags:
+      - permissions
   /datastore/authorizations:
     get:
       operationId: getAccessibleObjects
